# Adbirt-Campaign-Analysis-System

adbirt_campaign_analysis_system/: README.md  pyproject.toml
adbirt_campaign_analysis_system/src/adbirt_campaign_analysis_system/: api.py  crew.py  main.py
adbirt_campaign_analysis_system/src/adbirt_campaign_analysis_system/config/: agents.yaml  tasks.yaml
