[project]
name = "adbirt_campaign_analysis_system"
version = "0.1.0"
description = "adbirt_campaign_analysis_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
]

[project.scripts]
kickoff = "adbirt_campaign_analysis_system.main:kickoff"
plot = "adbirt_campaign_analysis_system.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
